# py-data-science-template

./: LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml  ci.yml
